# CCDR

./: .gitignore  CCDR_Apps_v75_EN.docx  CCDR_Apps_v75_UK.docx  CCDR_v6_1_UK.docx  CCDR_v6_2_UK.docx  CCDR_v6_3_UK.docx  CCDR_v6_EN (3).docx  CCDR_v7_1_EN.docx  CCDR_v7_1_UK.docx  CCDR_v7_3_EN.docx  CCDR_v7_3_UK.docx  CCDR_v7_4_EN.docx  CCDR_v7_UK.docx  Filament_Alignment_Paper_EN.docx  Filament_Alignment_Paper_UK.docx  README.md  Synthesis_v2_1_UK.docx  Synthesis_v2_2_UK.docx  Synthesis_v2_3_EN.docx  Synthesis_v2_3_UK.docx  Synthesis_v2_EN.docx  Synthesis_v2_UK.docx  Synthesis_v3_1_UK.docx  Synthesis_v3_3_EN (1).docx  Synthesis_v3_3_EN.docx  Synthesis_v3_5_EN.docx  Synthesis_v3_EN.docx  Synthesis_v3_UK.docx  apps_cdt_ccdr_tn_en.docx  apps_cdt_ccdr_tn_uk.docx  apps_ext_cdt_ccdr_tn_uk.docx  aqn_cdt_tn_ccdr_uk.docx  aurora_en.docx  aurora_uk.docx  baryogenesis_rvm_aqn_cdt_tn_ccdr_en.docx  baryogenesis_rvm_aqn_cdt_tn_ccdr_uk.docx  ccdr_applications_english.docx  ccdr_applications_ukrainian.docx  ccdr_article.docx  ccdr_article1.docx  (+55 more)
reseach_program/: cdt_ccdr_t1_test.py  (+2 more)
research_program/computations/prediction_tests/v2/8/test08_cache/XENONnT_light_wimp_repo/light_wimp_data_release-master/: README.md  pyproject.toml
research_program/computations/prediction_tests/v2/8/test08_cache/XENONnT_light_wimp_repo/light_wimp_data_release-master/light_wimp_data_release/: README.md  __init__.py  utils.py
research_program/computations/prediction_tests/v2/8/test08_cache/XENONnT_light_wimp_repo/light_wimp_data_release-master/notebooks/: 1. Templates.ipynb  2. Inference.ipynb  README.md
(+425 files in other folders)
